--- a/vcr_cassettes/create_token.yml
+++ b/vcr_cassettes/create_token.yml
@@ -13,6 +13,8 @@ http_interactions:
       - application/json
       Content-Type:
       - application/x-www-form-urlencoded
+      Authorization:
+      - Bearer <TOKEN_PLACEHOLDER>
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
   response:
@@ -23,7 +25,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Sun, 02 Jul 2023 17:10:33 GMT
+      - Tue, 04 Jul 2023 05:15:16 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -39,5 +41,5 @@ http_interactions:
     body:
       encoding: UTF-8
       string: '{"access_token":"<TOKEN_PLACEHOLDER>","token_type":"bearer","expires_in":1296000,"refresh_token":"<TOKEN_PLACEHOLDER>"}'
-  recorded_at: Mon, 03 Jul 2023 17:10:14 GMT
+  recorded_at: Tue, 04 Jul 2023 05:15:16 GMT
 recorded_with: VCR 6.2.0
