--- a/vcr_cassettes/list.yml
+++ b/vcr_cassettes/list.yml
@@ -11,6 +11,8 @@ http_interactions:
       - Faraday v2.7.7
       Accept:
       - application/json
+      Content-Type:
+      - application/json
       Authorization:
       - Bearer <TOKEN_PLACEHOLDER>
       Accept-Encoding:
@@ -23,7 +25,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Sun, 02 Jul 2023 20:05:48 GMT
+      - Tue, 04 Jul 2023 05:06:17 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -40,5 +42,5 @@ http_interactions:
       encoding: UTF-8
       string: '{"data":{"id":8944823,"name":"Liste de Nathan Lopez","status":"active","policy_accepted":true,"language":"fr_CA","created_on":1688012089,"default_sender":{"name":"Nathan
         Lopez","email":"nathan.lopez042@gmail.com"},"redirections":{"after_opt_in":null,"after_double_opt_in":null,"after_opt_out":null},"pages":{"opt_in":"https://cmtd1.com/oi/443/8ee2785836727f587728c0716769c5b4","opt_out":"https://cmtd1.com/oo/443/8ee2785836727f587728c0716769c5b4","subscribe":"https://cmtd1.com/s/443/8ee2785836727f587728c0716769c5b4","unsubscribe":null},"webhook":{"url":null,"actions":["all"]}}}'
-  recorded_at: Mon, 03 Jul 2023 20:05:30 GMT
+  recorded_at: Tue, 04 Jul 2023 05:06:17 GMT
 recorded_with: VCR 6.2.0
