--- a/vcr_cassettes/lists.yml
+++ b/vcr_cassettes/lists.yml
@@ -11,6 +11,8 @@ http_interactions:
       - Faraday v2.7.7
       Accept:
       - application/json
+      Content-Type:
+      - application/json
       Authorization:
       - Bearer <TOKEN_PLACEHOLDER>
       Accept-Encoding:
@@ -23,11 +25,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Sun, 02 Jul 2023 20:03:11 GMT
+      - Tue, 04 Jul 2023 05:06:16 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '245'
+      - '582'
       Connection:
       - keep-alive
       Vary:
@@ -40,6 +42,8 @@ http_interactions:
       encoding: UTF-8
       string: '{"pagination":{"count":null,"page":1,"per_page":50},"data":[{"id":8944823,"name":"Liste
         de Nathan Lopez","status":"active","language":"fr_CA","created_on":1688012089,"default_sender":{"name":"Nathan
+        Lopez","email":"nathan.lopez042@gmail.com"}},{"id":8947181,"name":"Test","status":"active","language":"fr_FR","created_on":1688445887,"default_sender":{"name":"Nathan
+        Lopez","email":"nathan.lopez042@gmail.com"}},{"id":8947182,"name":"My list","status":"active","language":"fr_CA","created_on":1688446626,"default_sender":{"name":"Nathan
         Lopez","email":"nathan.lopez042@gmail.com"}}]}'
-  recorded_at: Mon, 03 Jul 2023 20:02:52 GMT
+  recorded_at: Tue, 04 Jul 2023 05:06:16 GMT
 recorded_with: VCR 6.2.0
