--- a/vcr_cassettes/lists_count.yml
+++ b/vcr_cassettes/lists_count.yml
@@ -11,6 +11,8 @@ http_interactions:
       - Faraday v2.7.7
       Accept:
       - application/json
+      Content-Type:
+      - application/json
       Authorization:
       - Bearer <TOKEN_PLACEHOLDER>
       Accept-Encoding:
@@ -23,7 +25,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Sun, 02 Jul 2023 20:14:11 GMT
+      - Tue, 04 Jul 2023 05:06:17 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -38,8 +40,8 @@ http_interactions:
       - 'false'
     body:
       encoding: UTF-8
-      string: '{"pagination":{"count":1,"page":1,"per_page":1},"data":[{"id":8944823,"name":"Liste
+      string: '{"pagination":{"count":3,"page":1,"per_page":1},"data":[{"id":8944823,"name":"Liste
         de Nathan Lopez","status":"active","language":"fr_CA","created_on":1688012089,"default_sender":{"name":"Nathan
         Lopez","email":"nathan.lopez042@gmail.com"}}]}'
-  recorded_at: Mon, 03 Jul 2023 20:13:53 GMT
+  recorded_at: Tue, 04 Jul 2023 05:06:17 GMT
 recorded_with: VCR 6.2.0
