--- a/vcr_cassettes/lists.yml
+++ b/vcr_cassettes/lists.yml
@@ -25,11 +25,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Tue, 04 Jul 2023 05:06:16 GMT
+      - Tue, 04 Jul 2023 05:59:08 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '582'
+      - '752'
       Connection:
       - keep-alive
       Vary:
@@ -44,6 +44,7 @@ http_interactions:
         de Nathan Lopez","status":"active","language":"fr_CA","created_on":1688012089,"default_sender":{"name":"Nathan
         Lopez","email":"nathan.lopez042@gmail.com"}},{"id":8947181,"name":"Test","status":"active","language":"fr_FR","created_on":1688445887,"default_sender":{"name":"Nathan
         Lopez","email":"nathan.lopez042@gmail.com"}},{"id":8947182,"name":"My list","status":"active","language":"fr_CA","created_on":1688446626,"default_sender":{"name":"Nathan
+        Lopez","email":"nathan.lopez042@gmail.com"}},{"id":8947185,"name":"My list","status":"active","language":"fr_CA","created_on":1688447179,"default_sender":{"name":"Nathan
         Lopez","email":"nathan.lopez042@gmail.com"}}]}'
-  recorded_at: Tue, 04 Jul 2023 05:06:16 GMT
+  recorded_at: Tue, 04 Jul 2023 05:59:08 GMT
 recorded_with: VCR 6.2.0
