--- a/vcr_cassettes/list_unarchive.yml
+++ b/vcr_cassettes/list_unarchive.yml
@@ -1,11 +1,11 @@
 ---
 http_interactions:
 - request:
-    method: get
-    uri: https://api.cakemail.dev/brands/default/senders?page=1&per_page=50
+    method: post
+    uri: https://api.cakemail.dev/lists/8947861/unarchive
     body:
-      encoding: US-ASCII
-      string: ''
+      encoding: UTF-8
+      string: "<FILTERED>"
     headers:
       User-Agent:
       - Faraday v2.7.7
@@ -25,11 +25,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 05 Jul 2023 05:03:04 GMT
+      - Wed, 05 Jul 2023 05:03:09 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '244'
+      - '47'
       Connection:
       - keep-alive
       Vary:
@@ -40,7 +40,6 @@ http_interactions:
       - 'false'
     body:
       encoding: UTF-8
-      string: '{"pagination":{"count":null,"page":1,"per_page":50},"data":[{"id":"SpBIA10pyLsnIOnCb6Ih","name":"Nathan
-        Lopez","email":"nathan.lopez042@gmail.com","confirmed":true,"confirmed_on":1688011243,"language":"en_US","last_confirmation_sent_on":null}]}'
-  recorded_at: Wed, 05 Jul 2023 05:03:04 GMT
+      string: '{"id":8947861,"object":"list","archived":false}'
+  recorded_at: Wed, 05 Jul 2023 05:03:09 GMT
 recorded_with: VCR 6.2.0
