--- a/vcr_cassettes/lists_for_update.yml
+++ b/vcr_cassettes/lists_for_update.yml
@@ -25,11 +25,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 05 Jul 2023 04:33:49 GMT
+      - Wed, 05 Jul 2023 05:03:06 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '752'
+      - '753'
       Connection:
       - keep-alive
       Vary:
@@ -43,8 +43,8 @@ http_interactions:
       string: '{"pagination":{"count":null,"page":1,"per_page":50},"data":[{"id":8944823,"name":"Liste
         de Nathan Lopez","status":"active","language":"fr_CA","created_on":1688012089,"default_sender":{"name":"Nathan
         Lopez","email":"nathan.lopez042@gmail.com"}},{"id":8947181,"name":"Test","status":"active","language":"fr_FR","created_on":1688445887,"default_sender":{"name":"Nathan
-        Lopez","email":"nathan.lopez042@gmail.com"}},{"id":8947182,"name":"My list","status":"active","language":"fr_CA","created_on":1688446626,"default_sender":{"name":"Nathan
-        Lopez","email":"nathan.lopez042@gmail.com"}},{"id":8947185,"name":"My list","status":"active","language":"fr_CA","created_on":1688447179,"default_sender":{"name":"Nathan
+        Lopez","email":"nathan.lopez042@gmail.com"}},{"id":8947185,"name":"New name","status":"active","language":"fr_CA","created_on":1688447179,"default_sender":{"name":"Nathan
+        Lopez","email":"nathan.lopez042@gmail.com"}},{"id":8947861,"name":"My list","status":"active","language":"fr_CA","created_on":1688533385,"default_sender":{"name":"Nathan
         Lopez","email":"nathan.lopez042@gmail.com"}}]}'
-  recorded_at: Wed, 05 Jul 2023 04:33:49 GMT
+  recorded_at: Wed, 05 Jul 2023 05:03:06 GMT
 recorded_with: VCR 6.2.0
