--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -42,3 +42,9 @@ Metrics/BlockLength:
   Max: 2000
 Metrics/MethodLength:
   Max: 25
+Metrics/PerceivedComplexity:
+  Max: 15
+Metrics/AbcSize:
+  Max: 25
+Metrics/CyclomaticComplexity:
+  Max: 20
