--- a/vcr_cassettes/contacts_all_without_error.yml
+++ b/vcr_cassettes/contacts_all_without_error.yml
@@ -1,18 +1,18 @@
 ---
 http_interactions:
 - request:
-    method: post
-    uri: https://api.cakemail.dev/token
+    method: get
+    uri: https://api.cakemail.dev/lists/8944823/contacts?page=1&per_page=50
     body:
-      encoding: UTF-8
-      string: "<FILTERED>"
+      encoding: US-ASCII
+      string: ''
     headers:
       User-Agent:
       - Faraday v2.7.7
       Accept:
       - application/json
       Content-Type:
-      - application/x-www-form-urlencoded
+      - application/json
       Authorization:
       - Bearer <TOKEN_PLACEHOLDER>
       Accept-Encoding:
@@ -25,11 +25,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Fri, 07 Jul 2023 04:55:36 GMT
+      - Fri, 07 Jul 2023 04:55:24 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '1704'
+      - '282'
       Connection:
       - keep-alive
       Vary:
@@ -40,6 +40,6 @@ http_interactions:
       - 'false'
     body:
       encoding: UTF-8
-      string: '{"access_token":"<TOKEN_PLACEHOLDER>","token_type":"bearer","expires_in":1296000,"refresh_token":"<TOKEN_PLACEHOLDER>"}'
-  recorded_at: Fri, 07 Jul 2023 04:55:36 GMT
+      string: '{"pagination":{"count":null,"page":1,"per_page":50,"cursor":{"previous":null,"next":null}},"data":[{"id":1,"email":"nathan.lopez042@gmail.com","status":"active","subscribed_on":1688703281,"last_bounce_type":"none","bounces_count":0,"custom_attributes":[],"tags":[],"interests":[]}]}'
+  recorded_at: Fri, 07 Jul 2023 04:55:24 GMT
 recorded_with: VCR 6.2.0
